--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML basics</title>
+        <title>Nikole's Programming Portfolio</title>
     </head>
     <body>
-Welcome to Nikole's Portfolio Web Site 
+        Welcome to <strong>Nikole's</strong> Portfolio Web Site
 
     </body>
 </html>
