--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <img src= "
         <meta charset="utf-8">
         <title>Nikole's Programming Portfolio</title>
     </head>
