--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src= "csc106_banner-2.jpg"
+        <img src= "csc106_banner-2.jpg">
         <meta charset="utf-8">
         <title>Nikole's Programming Portfolio</title>
     </head>
