--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <img src= "csc106_banner-2.jpg">
         <meta charset="utf-8">
-        <title>Nikole's Programming Portfolio</title>
+        <br><title>Nikole's Programming Portfolio</title>
     </head>
     <body>
         Welcome to <strong>Nikole's</strong> Portfolio Web Site
