--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src= "csc106_banner-2.jpg">
+        <img src= "csc106_banner-2.jpg"><br>
         <meta charset="utf-8">
-        <br><title>Nikole's Programming Portfolio</title>
+        <title>Nikole's Programming Portfolio</title>
     </head>
     <body>
         Welcome to <strong>Nikole's</strong> Portfolio Web Site
