--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <img src= "csc106_banner-2.jpg"><br>
         <meta charset="utf-8">
         <title>Nikole's Programming Portfolio</title>
+        <img src=
     </head>
     <body>
         Welcome to <strong>Nikole's</strong> Portfolio Web Site
