--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <img src= "csc106_banner-2.jpg"><br>
         <meta charset="utf-8">
+        <img src="home button.png"> <br>
         <title>Nikole's Programming Portfolio</title>
-        <img src="home button.png">
+        
     </head>
     <body>
         Welcome to <strong>Nikole's</strong> Portfolio Web Site
