--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src= "csc106_banner-2.jpg"><br>
+        <table>
+            <tr>
+                <th><img src= "csc106_banner-2.jpg">
+                <th><img src= "    
+                <th><img src="
+        
         <meta charset="utf-8">
         <img src="home button.png"> <br>
         <title>Nikole's Programming Portfolio</title>
