--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <table>
             <tr>
                 <th><img src= "csc106_banner-2.jpg">
-                <th><img src= "    
-                <th><img src="
+                <th><img src= "javascriptsbutton.png">    
+                <th><img src="aboutmebutton.png">
         
         <meta charset="utf-8">
         <img src="home button.png"> <br>
