--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src= "csc106_banner-2.jpg">
+        <img src= "csc106_banner-2.jpg"><br>
         <table>
             <tr>
                 <th><img src="home button.png">
