--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 <th><img src= "javascriptsbutton.png">    
                 <th><img src="aboutmebutton.png">
             </tr>
-                </table>
+                </table><br>
             
         
         <meta charset="utf-8">
