--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
     </head>
     <body>
-        Welcome to <strong>Nikole's</strong> Portfolio Web Site
-
+        Welcome to <strong>Nikole's</strong> Portfolio Web Site<br>
+Hello, my name is Nikole DeSimone. This website is a collection of my projects from the course CSC 106 at URI. 
     </body>
 </html>
