--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <img src= "csc106_banner-2.jpg"><br>
         <table>
             <tr>
-                <th><img src="home button.png">
+                <th><a href= " <img src="home button.png">
                 <th><img src= "javascriptsbutton.png">    
                 <th><img src="aboutmebutton.png">
             </tr>
