--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
         
     </head>
     <body>
-    My Name is Nikole DeSimone and I am from Brewster, Massachusetts. I am currently undecided, but I am thinking about Computer Science as either a major or minor.  <br>
+    My Name is Nikole DeSimone and I am from Brewster, Massachusetts. I am currently undecided, but I am thinking about Computer Science as either a major or minor.
     I enjoy going to the beach, figuring skating, and spending time with my friends and family. 
     </body>
 </html>
