--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+    <meta charset="utf-8">
+        <img src= "csc106_banner-2.jpg"><br>
+        <table>
+            <tr>
+                <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home button.png"></a>
+                <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascriptsbutton.png"></a>    
+                <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="aboutmebutton.png"></a>
+            </tr>
+                </table><br>
+     
+        <title>Nikole's Programming Portfolio: Javascripts</title>
+        
+    </head>
+    <body>
+ 
+    </body>
+</html>
