--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: rgb(255, 204, 255);
         }  
         
-        body {
+        table{
             background-color: rgb(255, 204, 255);
         }
             
