--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <title>Nikole's Programming Portfolio</title>
               <style>
         
-        h2 {
+        body {
             color: rgb(255, 204, 255);
         }  
         
