--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta charset="utf-8">
      
         <title>Nikole's Programming Portfolio</title>
-            
+            <link rel="stylesheet" href="style1.css">
     </head>
     <body>
         Welcome to <strong>Nikole's</strong> Portfolio Web Site<br>
