--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,10 @@
         <img src= "csc106_banner-2.jpg"><br>
         <table>
             <tr>
-                <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home button.png"></a>
-                <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascriptsbutton.png"></a>    
-                <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="aboutmebutton.png"></a>
+                <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
+                <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascripts.png"></a>  
+                <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="apps.png"></a>    
+                <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="aboutme.png"></a>
             </tr>
                 </table><br>
      
