--- a/javascripts.html
+++ b/javascripts.html
@@ -6,7 +6,7 @@
         <table>
             <tr>
                 <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
-                <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascripts.png"></a>  
+                <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascript.png"></a>  
                 <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="apps.png"></a>    
                 <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="aboutme.png"></a>
             </tr>
