--- a/javascripts.html
+++ b/javascripts.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="utf-8">
         <img src= "csc106_banner-2.jpg"><br>
+           <link rel="stylesheet" href="style1.css">
         <table>
             <tr>
                 <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
