--- a/javascripts.html
+++ b/javascripts.html
@@ -16,7 +16,8 @@
         <title>Nikole's Programming Portfolio: Javascripts</title>
         
     </head>
+    <h1> Javascripts </h1>
     <body>
- 
+ This is a collection of the Javascript programs I have created this semester. 
     </body>
 </html>
