--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,7 @@
         <title>Nikole's Programming Portfolio: About Me</title>
          
     </head>
+    <h1> About Me </h1> 
     <body>
     My Name is Nikole DeSimone and I am from Brewster, Massachusetts. I am currently undecided, but I am thinking about Computer Science as either a major or minor.
     I enjoy going to the beach, figuring skating, and spending time with my friends and family. 
