--- a/apps.html
+++ b/apps.html
@@ -10,7 +10,7 @@
             <tr>
                 <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
                 <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascript.png"></a>  
-                <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="apps.png"></a>    
+                <th><a href= "https://nikoledesimone.github.io/apps.html"> <img src="apps.png"></a>    
                 <th><a href= "https://nikoledesimone.github.io/aboutme.html"> <img src="aboutme.png"></a>
             </tr>
                 </table><br>
