--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Nikole's Programming Portfolio</title>
             <link rel="stylesheet" href="style1.css">
     <head>
-        <img src= "myBanner.jpg" width="800"><br>
+        <img src= "myBanner-2.jpg" width="800"><br>
         <table width="800">
             <tr>
                 <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
