--- a/javascripts.html
+++ b/javascripts.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="utf-8">
-        <img src= "myBanner.jpg" width= "800"><br>
+        <img src= "myBanner-2.jpg" width= "800"><br>
            <link rel="stylesheet" href="style1.css">
         <table>
             <tr>
