--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
            <link rel="stylesheet" href="style1.css">
-        <img src= "myBanner.jpg" width="800"><br>
+        <img src= "myBanner-2.jpg" width="800"><br>
         <table>
             <tr>
                 <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
