--- a/javascripts.html
+++ b/javascripts.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
         <img src= "myBanner-2.jpg" width= "800"><br>
            <link rel="stylesheet" href="style1.css">
-        <table>
+        <table width="800">
             <tr>
                 <th><a href= "https://nikoledesimone.github.io/index.html"> <img src="home.png"></a>
                 <th><a href= "https://nikoledesimone.github.io/javascripts.html"> <img src= "javascript.png"></a>  
