--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,13 @@
     <body>
     My Name is Nikole DeSimone and I am from Brewster, Massachusetts. I am currently undecided, but I am thinking about Computer Science as either a major or minor.
     I enjoy going to the beach, figuring skating, and spending time with my friends and family. 
-   
+     <table width="800">
+            <tr>
+                <tr> src="img_" alt= "A picture of me" width="150"
+                <tr> src "img_" alt= "A picture of me with my cousin" width ="150"
+                <tr>src "img_" alt= "A picture of Mayflower beach on Cape Cod" width ="150" 
+            </tr>
+                </table><br>
     
     
     </body>
