--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
      <table width="800">
             <tr>
                 <tr> src="IMG_0965.jpeg" alt= "A picture of me" width="150"
-                <tr> src "" alt= "A picture of me with my cousin" width ="150"
+                <tr> src "IMG_3977.jpeg" alt= "A picture of me with my cousin" width ="150"
                 <tr>src "" alt= "A picture of Mayflower beach on Cape Cod" width ="150" 
             </tr>
                 </table><br>
