--- a/aboutme.html
+++ b/aboutme.html
@@ -22,9 +22,14 @@
     I enjoy going to the beach, figuring skating, and spending time with my friends and family. 
      <table width="800">
             <tr>
-                <tr>img src="IMG_0965.jpeg" alt= "A picture of me" width="150"
-                <tr>img src "IMG_3977.jpeg" alt= "A picture of me with my cousin" width ="150"
-                <tr>img src "IMG_4532.jpeg" alt= "A picture of Mayflower beach on Cape Cod" width ="150" 
+                <tr>
+                    img src="IMG_0965.jpeg" alt= "A picture of me" width="150"
+         </tr>
+                <tr>
+                    img src="IMG_3977.jpeg" alt= "A picture of me with my cousin" width ="150"
+         </tr>   
+               
+                <tr>img src="IMG_4532.jpeg" alt= "A picture of Mayflower beach on Cape Cod" width ="150" 
             </tr>
                 </table><br>
     
