--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+     <body background="">
      <meta charset="utf-8">
      
         <title>Nikole's Programming Portfolio</title>
