--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-     <body background="">
+     <body background="background.png.jpg">
      <meta charset="utf-8">
      
         <title>Nikole's Programming Portfolio</title>
