--- a/javascripts.html
+++ b/javascripts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+       <body background="background.png.jpg">
     <head>
     <meta charset="utf-8">
         <img src= "myBanner-2.jpg" width= "800"><br>
