--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+        <body background="background.png.jpg">
      <meta charset="utf-8">
      
         <title>Nikole's Programming Portfolio</title>
