--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+       <body background="background.png.jpg">
     <head>
     <meta charset="utf-8">
            <link rel="stylesheet" href="style1.css">
