--- a/javascripts.html
+++ b/javascripts.html
@@ -20,5 +20,6 @@
     <h1> Javascripts </h1>
     <body>
  This is a collection of the Javascript programs I have created this semester. 
+           <h2><a href="https://www.khanacademy.org/computer-programming/desimone_dancing_bitmoji/6440810765926400">DeSimone_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_dancing_bitmoji/6440810765926400/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
