--- a/javascripts.html
+++ b/javascripts.html
@@ -20,6 +20,8 @@
     <h1> Javascripts </h1>
     <body>
  This is a collection of the Javascript programs I have created this semester. 
+           <h2><a href="https://www.khanacademy.org/computer-programming/desimone_bitmoji/5400672329842688">DeSimone_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_bitmoji/5400672329842688/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
            <h2><a href="https://www.khanacademy.org/computer-programming/desimone_dancing_bitmoji/6440810765926400">DeSimone_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_dancing_bitmoji/6440810765926400/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+           <h2><a href="https://www.khanacademy.org/computer-programming/bitmoji-race/5413465309364224">DeSimone_racingBitmoji</a></h2><script>
     </body>
 </html>
