--- a/javascripts.html
+++ b/javascripts.html
@@ -19,7 +19,7 @@
     </head>
     <h1> Javascripts </h1>
     <body>
- This is a collection of the Javascript programs I have created this semester. 
+ This is a collection of the Javascript programs I have created this semester. <br>
              <table width="600">
             <tr>
                 <th><a href= <h2><a href="https://www.khanacademy.org/computer-programming/desimone_bitmoji/5400672329842688">DeSimone_bitmoji</a></h2>
