--- a/javascripts.html
+++ b/javascripts.html
@@ -30,8 +30,12 @@
               </th>
                 <th><h2><a href="https://www.khanacademy.org/computer-programming/bitmoji-race/5413465309364224">DeSimone_racingBitmoji</a></h2>
                 <script src="https://www.khanacademy.org/computer-programming/bitmoji-race/5413465309364224/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+              </th>
+              <th><h2><a href="https://www.khanacademy.org/computer-programming/desimone_decision/5250385239654400">DeSimone_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_decision/5250385239654400/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 </th>
-            </tr>
+              <th><h2><a href="https://www.khanacademy.org/computer-programming/desimone_follow/6083707066957824">DeSimone_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_follow/6083707066957824/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+              </th>
+              </tr>
                 </table><br>
            
            
