--- a/javascripts.html
+++ b/javascripts.html
@@ -35,6 +35,8 @@
 </th>
               <th><h2><a href="https://www.khanacademy.org/computer-programming/desimone_follow/6083707066957824">DeSimone_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_follow/6083707066957824/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
               </th>
+              <th>
+                     <a href="https://www.khanacademy.org/computer-programming/desimone_bitmojirain/5922563400450048">DeSimone_BitmojiRain</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_bitmojirain/5922563400450048/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
               </tr>
                 </table><br>
            
