--- a/javascripts.html
+++ b/javascripts.html
@@ -45,6 +45,8 @@
                    <th>
                      <a href="https://www.khanacademy.org/computer-programming/desimone_bitmojirain/5922563400450048">DeSimone_BitmojiRain</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_bitmojirain/5922563400450048/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
                    </th> 
+                   <th><h2><a href="https://www.khanacademy.org/computer-programming/desimone_games/4894815138660352">DeSimone_Games</a></h2><script src="https://www.khanacademy.org/computer-programming/desimone_games/4894815138660352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+</th>
                    </tr>
     </body>
 </html>
